test/org/midica/testfiles/failing/eff-func-pbr-halftone-gt-max-3.midica
INCLUDE inc/instruments.midica


0: pitch_range.set(127.0001)
